fix(scroll): only show scrollbars when needed

--- a/app/javascript/frontend/partials/Navigation/styles/index.scss
+++ b/app/javascript/frontend/partials/Navigation/styles/index.scss
@@ -67,7 +67,7 @@ nav {
     right: auto;
     height: 100vh;
     max-height: 100vh;
-    overflow: auto;
+    overflow-y: auto;
     padding: 0;
 
     .logo {
