--- a/app/javascript/stylesheets/main.scss
+++ b/app/javascript/stylesheets/main.scss
@@ -53,7 +53,7 @@ body {
 
   .main {
     margin-bottom: 50px;
-    overflow-y: scroll;
+    overflow-y: auto;
     flex: 1;
   }
 
